tests/invalid_typecheck/test_tc_invoke_undeclared.aphi
/*
Type-check error: Unknown identifier 'doesNotExist'.
Invokes a procedure that was never declared.
*/

procedure main {
    invoke doesNotExist;
}
